# libsafetynet

./: .gitignore  BuildOptions.cmake  CMakeLists.txt  CTestTestfile.cmake  Dockerfile  Doxyfile  Makefile  PKGBUILD  Packaging.cmake  README.md  base_interface.cmake  build.sh  dev_setup.sh  docker_dev_setup.sh  empty.c  install.sh  libsafetynet.pc.in  libsafetynet_config.h.in  makefile  package.sh  public.sym  release_build_features_flags.txt  test.sh
.github/: CODEOWNERS
.github/workflows/: TestingWorkflow.yml  staticDoxygenPages.yml
Testing/: CMakeLists.txt  CTestTestfile.cmake
Testing/frontend_api_tests/: CMakeLists.txt  CTestTestfile.cmake  sn_allocators_test.cpp
backend_api/: CMakeLists.txt
backend_api/include/: _pri_api.h  linked_list_c.h  plat_threading.h  sn_crash.h
backend_api/include/allocation_manager/: alloc_manager_c.h
backend_api/include/platform_independent/: plat_allocators.h
backend_api/src/: linked_list_c.c  plat_allocators.c  plat_threading.c  setup.c  sn_crash.c
backend_api/src/allocation_manager/: alloc_manager_c.c
backend_api/src/platform_independent/: plat_allocators.c  plat_threading.c
include/: libsafetynet.h  libsafetynet32.h  libsafetynet_extension.h  pri_list.h
manpages/: sn_get_last_error.3  sn_malloc.3
scripts/: smart_strip.py
src/: _pri_api.h  cpp_new.cpp  crash.c  crash.h  extended_data.h  libsafetynet.c  linked_list_c.c  linked_list_c.h  new.cpp  plat_allocators.c  plat_threading.c  pri_list.c  pri_list.h  setup.c  sn_allocator.c  sn_cache.c  sn_crash.c  sn_crash.h  sn_debug.c  sn_error.c  sn_file_work.c  sn_logging.c  sn_metadata.c
src/allocation_manager/: alloc_manager_c.c  alloc_manager_c.h
